# home-assistant-electric-ireland-insights

./: .gitignore  AGENTS.md  CHANGELOG.md  LEGAL.md  README.md  RELEASE.md  SECURITY.md  hacs.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: validate.yml
brands/: README.md
custom_components/electric_ireland_insights/: AGENTS.md  __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  quality_scale.yaml  sensor.py  strings.json  types.py
custom_components/electric_ireland_insights/translations/: en.json
docs/: index.md  oauth-api-investigation.md
scripts/: capture_fixtures.py
tests/: AGENTS.md  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_logging_redaction.py  test_sensor.py
tests/fixtures/real/: dashboard.html  insights.html  login-dashboard.html
tests/integration/: conftest.py  test_bug_discovery.py  test_edge_cases.py  test_flows.py  test_lifecycle.py  test_tariffs.py
